# systemd-boot-password

./: Makefile.am  README.md  autogen.sh  configure.ac
completion/: Makefile.am
completion/bash/: Makefile.am  sbpctl
m4/: arch.m4
man/: Makefile.am  sbpctl.xml
src/: Makefile.am  sbp-generate  sbp-install.in  sbpctl.in
src/efi/: Makefile.am  boot.c  sha512.c  sha512.h  stub.c  util.c  util.h
